<resources>
    <string name="app_name">Как доехать.by</string>
    <string name="title_home">Домой</string>
    <string name="title_map">Адреса</string>
    <string name="title_bookmarks">Закладки</string>
    <string name="title_info">Доп.инфо</string>
    <string name="title_routes">Маршруты</string>

    <string name="hotels">Отели</string>
    <string name="restaraunts">Рестораны</string>
    <string name="shopes">Магазины</string>
    <string name="banks">банки</string>
    <string name="airports">Аэропорт</string>

    <string name="search_text">Искать ...</string>
    <string name="user_dashboard">Дашборд</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>