<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.poms_city_transport.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_routes"
        android:name="com.example.poms_city_transport.ui.route.routeFragment"
        android:label="@string/title_routes"
        tools:layout="@layout/fragment_route" />

    <fragment
        android:id="@+id/navigation_adress"
        android:name="com.example.poms_city_transport.ui.map.mapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.poms_city_transport.ui.info.infoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_bookmarks"
        android:name="com.example.poms_city_transport.ui.bookmarks.bookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks" />
</navigation>